[package]
name = "struct-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
itertools = "0.10"
rayon = "1.5"
variantly = "0.2"
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.10"